Wed Mar 15 13:44:23 1995 Keith Vetter (keithv@fusion.com)

	* des.h: now includes des_int.h for proper prototypes.
	* enc_dec.c: cast the types of the input/output buffers in calling
           the encrypt routine.
	* key_sched.c: removed prototype of a non-existent routine.
	* new_rnd_key.c: removed prototypes in the file and instead include
           header file with the real prototypes.
	* random_key.c: code, as it was, could never have worked. Adding 
           prototypes revealed that it was passing KEY with the wrong level
           of indirection.
        
Tue Mar 7 19:57:28 1995 Keith Vetter (keithv@fusion.com)

	* pcbc_enc.c: added casts on the long->char assignments.
        * str_to_key.c: converted int->long to match types.


Wed Mar  8 17:13:44 1995  Theodore Y. Ts'o  <tytso@dcl>

	* Makefile.in (clean): Dete verify.o on a "make clean".

Wed Mar  1 17:57:44 1995  Theodore Y. Ts'o  <tytso@dcl>

	* verify.c: Remove declaration of exit().

Tue Feb 28 01:30:11 1995  John Gilmore  (gnu at toad.com)

	* cksum.c, des.c, des.h, enc_dec.c, pcbc_encrypt.c, quad_cksum.c,
	read_passwd.c, string2key.c, weak_key.c:  Avoid <krb5/...> includes.

Tue Feb 21 17:42:44 1995 Keith Vetter (keithv@fusion.com)

        * Makefile.in: made to work on the PC
	* *.c, des.h: added windows INTERFACE keyword
        * read_passwd.c: renamed a static variable to avoid compiler error
        * quad_cksum.c: errno extern declaration removed on the PC

Fri Feb  3 17:23:45 1995  Theodore Y. Ts'o  (tytso@dcl)

	* pcbc_encrypt.c: Add SIZEOF_FOO checks to properly define
		  KRB_INT32

Wed Jan 18 15:12:18 1995  Theodore Y. Ts'o  (tytso@dcl)

	* read_passwd.c (des_read_password): Declare global_context and
		initialize it if necessary.

Fri Jan 13 15:23:47 1995  Chris Provenzano (proven@mit.edu)

    * Added krb5_context to all krb5_routines

Thu Nov  3 18:29:10 1994  Mark Eichin  (eichin@cygnus.com)

	* pcbc_encrypt.c: moved from f_pcbc.c in lib/crypto/des, and